hw2-simplerest-service/kubernetes/simplerest/templates/deployment.yaml
---
# Source: simplerest/templates/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  annotations: { }
  labels:
    app: simplerest
  name: 'hw2-simplerest-deployment'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplerest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: "RollingUpdate"
  template:
    metadata:
      annotations: { }
      labels:
        app: simplerest
    spec:
      containers:
        - image: 'kkeker/hw2-simplerest:v2.0-x86_64'
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: 8000
          name: 'hw2-simplerest-deployment'
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 1
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /home/ballerina/ballerina.conf
              subPath: ballerina.conf
      volumes:
        - name: config
          configMap:
            name: hw2-simplerest-config
      nodeSelector: { }
